fix(UI): Move notification viewport to top of screen on mobile

--- a/ui/src/components/Notifications/Notifications.css
+++ b/ui/src/components/Notifications/Notifications.css
@@ -5,8 +5,13 @@
     max-width: 100vw;
     position: fixed;
     right: 0;
-    bottom: 0;
+    top: 0;
     z-index: 9999;
+
+    @media (min-width: 1024px) {
+        top: inherit;
+        bottom: 0;
+    }
 }
 
 .notification {
